fix: dark mode link color

--- a/src/dark-mode.css
+++ b/src/dark-mode.css
@@ -32,7 +32,7 @@ body.theme-dark{
 }
 
 .theme-dark a {
-    color: var(--dark-text-color-2);
+    color: var(--dark-text-color-2) !important;
 }
 
 .theme-dark small{
